[package]
name = "webhook-cycle"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
simple_logger = "5.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.9"
utoipa = "5.4"
utoipa-actix-web = "0.1"
utoipa-swagger-ui = { version = "9.0", features = ["actix-web"] }
