[package]
name = "webhook-cycle"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/azamaulanaaa/webhook-cycle"

[dependencies]
actix-web = "4.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
simple_logger = "5.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
toml = "0.9"
utoipa = { version = "5.4", features = ["actix_extras"] }
utoipa-actix-web = "0.1"
utoipa-swagger-ui = { version = "9.0", features = ["actix-web"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
